--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,39 @@
-body{
-  font-family: Helvetica,Arial,sans-serif;
-  
-  
+*{
+  margin:0px;
+  padding: 0px;
+  box-sizing: border-box;
+
 }
+
+/*                 PARTICULES             */
+
+
+#webcoderskull{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  padding: 0 20px;
+  width: 100%;
+  text-align: center;
+}
+
+canvas{
+  height:100vh;
+  background-color:#fff;
+}
+#webcoderskull h1{
+letter-spacing: 5px;
+font-size: 5rem;
+font-family: 'Roboto', sans-serif;
+text-transform: uppercase;
+font-weight: bold;
+}
+
+
+/*                                             */
+
+
+
 #header-contact{
     height: 530px;
     
@@ -58,10 +89,44 @@ hr{
     text-decoration: none;
     font-size: 25px;
     color: black;
-    display: block;
-    transition: 0.3s;
+    display: block;    
+    opacity: 0;
+    -webkit-animation: fade-in 1.1s 1;
+    animation: fade-in 1.1s 1;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;   
+  
   }
   
+  .sidenav a:nth-child(1) {
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+  }
+  
+  .sidenav a:nth-child(2) {
+    -webkit-animation-delay: 0.6s;
+     animation-delay: 0.6s;
+  }
+  
+  .sidenav a:nth-child(3) {
+    -webkit-animation-delay: 0.9s;
+    animation-delay: 0.9s;
+  }
+  
+  .sidenav a:nth-child(4) {
+    -webkit-animation-delay: 1.1s;
+    animation-delay: 1.1s;
+  }
+  
+@-webkit-keyframes fade-in{
+  0%{opacity:0; filter: blur(4px);}
+  100%{opacity:1; filter: blur(0px);}
+}
+  @keyframes fade-in{  
+    0%{opacity:0; filter: blur(4px);}  
+    100%{opacity:1; filter: blur(0px);}
+  }
+
   .sidenav a:hover {
     color: #f1f1f1;
     text-decoration: none;
