--- a/styles.css
+++ b/styles.css
@@ -10,23 +10,49 @@
 
 #webcoderskull{
   position: absolute;
-  left: 0;
-  top: 50%;
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%);
   padding: 0 20px;
   width: 100%;
   text-align: center;
 }
 
 canvas{
-  height:100vh;
+  height:80vh;
   background-color:#fff;
 }
 #webcoderskull h1{
 letter-spacing: 5px;
 font-size: 5rem;
 font-family: 'Roboto', sans-serif;
-text-transform: uppercase;
-font-weight: bold;
+font-weight:lighter;
+}
+
+#mainList li a{
+position: relative;
+text-decoration: none;
+color: black;
+font-size: 18px;
+
+}
+
+#mainList li a:after, .sidenav a:after{
+  content: "";
+  position: absolute;
+  background-color: red;
+  height: 2px;
+  width: 0%;
+  left:0;
+  bottom:-10px;
+  transition: 0.3s;
+}
+
+#mainList li a:hover{
+  color:grey;
+}
+#mainList li a:hover:after, .sidenav a:hover:after{
+  width: 50%;
 }
 
 
@@ -34,7 +60,7 @@ font-weight: bold;
 
 
 
-#header-contact{
+.header-contact{
     height: 530px;
     
 }
@@ -84,53 +110,53 @@ hr{
     padding-top: 60px;
   }
   
-  .sidenav a {
+  .sidenav ul li a {
+    position: relative;
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: black;
-    display: block;    
+    display: block;  
     opacity: 0;
-    -webkit-animation: fade-in 1.1s 1;
-    animation: fade-in 1.1s 1;
+    -webkit-animation: fadeIn 0.5s 1;
+    animation: fadeIn 0.5s 1;
     -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;   
-  
+    animation-fill-mode: forwards;
+  }
+  .sidenav ul li a:hover{
+    text-decoration: none;
+    color:grey;
+  }
+  .sidenav ul li a:nth-child(4n+1) {
+    -webkit-animation-delay: 0.1s;
+    animation-delay: 0.1s;
   }
   
-  .sidenav a:nth-child(1) {
+  .sidenav ul li a:nth-child(4n+2) {
     -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s;
+     animation-delay: 0.3s;
   }
   
-  .sidenav a:nth-child(2) {
+  .sidenav ul li a:nth-child(4n+3) {
     -webkit-animation-delay: 0.6s;
-     animation-delay: 0.6s;
+    animation-delay: 0.6s;
   }
   
-  .sidenav a:nth-child(3) {
+  .sidenav ul li a:nth-child(4n+4) {
     -webkit-animation-delay: 0.9s;
     animation-delay: 0.9s;
   }
   
-  .sidenav a:nth-child(4) {
-    -webkit-animation-delay: 1.1s;
-    animation-delay: 1.1s;
-  }
-  
-@-webkit-keyframes fade-in{
+@-webkit-keyframes fadeIn{
   0%{opacity:0; filter: blur(4px);}
   100%{opacity:1; filter: blur(0px);}
 }
-  @keyframes fade-in{  
+  @keyframes fadeIn{  
     0%{opacity:0; filter: blur(4px);}  
     100%{opacity:1; filter: blur(0px);}
   }
 
-  .sidenav a:hover {
-    color: #f1f1f1;
-    text-decoration: none;
-  }
+ 
   
   .sidenav .closebtn {
     position: absolute;
@@ -175,5 +201,7 @@ hr{
     .display{font-size: 45px; margin-bottom: 10px; margin-left: -5px; }
     #header-contact{max-height: 400px;}
     #sec{font-size: 25px; margin: 20px; padding: 5px;}
-    
+    #webcoderskull h1{font-size: 2rem;}
+    #mainList li a{font-size: 16px;}
+    canvas{height: 45vh;}
 }
