--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,10 @@ font-size: 5rem;
 font-family: 'Roboto', sans-serif;
 font-weight:lighter;
 }
-
+#mainList{
+  padding: auto;
+  justify-content: flex-end;
+}
 #mainList li a{
 position: relative;
 text-decoration: none;
@@ -103,7 +106,7 @@ hr{
     position: fixed;
     z-index: 1;
     top: 0;
-    left: 0;
+    right: 0;
     background-color: #fff;
     overflow-x: hidden;
     transition: 0.5s;
@@ -127,32 +130,32 @@ hr{
     text-decoration: none;
     color:grey;
   }
-  .sidenav ul li a:nth-child(4n+1) {
+  .sidenav ul li a:nth-child(5n+1) {
     -webkit-animation-delay: 0.1s;
     animation-delay: 0.1s;
   }
   
-  .sidenav ul li a:nth-child(4n+2) {
+  .sidenav ul li a:nth-child(5n+2) {
     -webkit-animation-delay: 0.3s;
      animation-delay: 0.3s;
   }
   
-  .sidenav ul li a:nth-child(4n+3) {
+  .sidenav ul li a:nth-child(5n+3) {
     -webkit-animation-delay: 0.6s;
     animation-delay: 0.6s;
   }
   
-  .sidenav ul li a:nth-child(4n+4) {
+  .sidenav ul li a:nth-child(5n+4) {
     -webkit-animation-delay: 0.9s;
     animation-delay: 0.9s;
   }
   
 @-webkit-keyframes fadeIn{
-  0%{opacity:0; filter: blur(4px);}
-  100%{opacity:1; filter: blur(0px);}
+  0%{opacity:0; filter: blur(4px);transform: translateY(16px);}
+  100%{opacity:1; filter: blur(0px);transform: translateY(16px);}
 }
   @keyframes fadeIn{  
-    0%{opacity:0; filter: blur(4px);}  
+    0%{opacity:0; filter: blur(4px);transform: translateY(16px);}  
     100%{opacity:1; filter: blur(0px);}
   }
 
@@ -161,9 +164,9 @@ hr{
   .sidenav .closebtn {
     position: absolute;
     top: 0;
-    right: 25px;
+    left: 0px;
     font-size: 36px;
-    margin-left: 50px;
+    margin-right: 50px;
   }
   
   #main {
@@ -198,10 +201,11 @@ hr{
 
 @media screen and (max-width: 450px){
     #main a {padding: 0px; margin-left: 5px;}
-    .display{font-size: 45px; margin-bottom: 10px; margin-left: -5px; }
+    .display{font-size: 30px; margin-top: 10px; margin-left: -5px; }
     #header-contact{max-height: 400px;}
-    #sec{font-size: 25px; margin: 20px; padding: 5px;}
+    #sec{font-size: 18px; margin: 20px; padding: 15px;}
     #webcoderskull h1{font-size: 2rem;}
+    #mainList{justify-content: center; margin:10px;}
     #mainList li a{font-size: 16px;}
     canvas{height: 45vh;}
 }
