--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 *{
   margin:0px;
   padding: 0px;
-  box-sizing: border-box;
+  box-sizing: border-box;  
 }
 html{
   scroll-behavior: smooth;
@@ -36,7 +36,8 @@ h1,h2,h3,p,a{
 }
 
 canvas{
-  height:80vh;
+  width: 100vw;
+  height:90vh;
   background-color:#fff;
 }
 #webcoderskull h1{
@@ -225,10 +226,11 @@ hr{
     .display{font-size: 30px; margin-top: 10px; margin-left: -5px; }
     #header-contact{max-height: 400px;}
     #sec{font-size: 16px; margin: 0px; padding: 5px;}
+    #webcoderskull{margin: 0;}
     #webcoderskull h1{font-size: 2rem;}
     #mainList{justify-content: center; margin:10px;}
     #mainList li a{font-size: 16px;}
-    canvas{height: 55vh;}
+    canvas{height: 60vh;width: 100vw;margin-left: 0px;}
     .expert{padding:5px; margin: 5px; left:15px}
 }
 
