--- a/styles.css
+++ b/styles.css
@@ -238,3 +238,9 @@ hr{
   .expert{padding: 5px;}
   #sec{font-size:25px; margin-top:50px; margin-bottom: 100px; padding: 20px;}
 }
+@media screen and (max-width: 1980px){
+  .small-header{font-size: 30px;}
+  .expert nav li a{font-size: 30px;}
+  #about p, #media p{font-size: 25px;}
+  #contact a{font-size: 22px;}
+}
