--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 html{
   scroll-behavior: smooth;
 }
+
 h1,h2,h3,p,a{
   font-family: 'Raleway', sans-serif !important;
 }
@@ -122,7 +123,7 @@ hr{
   margin: auto;
   background-color: rgb(255, 247, 247);
 }
-.sidenav {
+/* .sidenav {
     height: 100%;
     width: 0;
     position: fixed;
@@ -179,7 +180,7 @@ hr{
   @keyframes fadeIn{  
     0%{opacity:0; filter: blur(4px);transform: translateY(16px);}  
     100%{opacity:1; filter: blur(0px);}
-  }
+  } */
 
  
   
@@ -222,17 +223,31 @@ hr{
 }
 
 @media screen and (max-width: 450px){
+    
     #main a {padding: 0px; margin-left: 5px;}
     .display{font-size: 30px; margin-top: 10px; margin-left: -5px; }
     #header-contact{max-height: 400px;}
     #sec{font-size: 16px; margin: 0px; padding: 5px;}
     #webcoderskull{margin: 0;}
-    #webcoderskull h1{font-size: 2rem;}
+    
     #mainList{justify-content: center; margin:10px;}
     #mainList li a{font-size: 16px;}
     canvas{height: 60vh;width: 100vw;margin-left: 0px;}
     .expert{padding:5px; margin: 5px; left:15px}
+    #about .row p{font-size: 1.125em;};
+    
+    
+    
+    #about .text-responsive {
+      font-size: 1.5625rem;
+    }
+    
 }
+
+
+
+
+
 
 @media screen and (max-width: 810px){
   .expert{padding: 5px;}
@@ -244,3 +259,4 @@ hr{
   #about p, #media p{font-size: 1.5625em;}
   #contact a{font-size: 1.375em;}
 }
+
