--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,13 @@
   padding: 0px;
   box-sizing: border-box;  
 }
+
 html{
   scroll-behavior: smooth;
 }
-
+body{
+  overflow-x: hidden;
+}
 h1,h2,h3,p,a{
   font-family: 'Raleway', sans-serif !important;
 }
@@ -25,60 +28,30 @@ h1,h2,h3,p,a{
 
 /*                 PARTICULES             */
 
+canvas{
+  width: 100vw;
+  height:90vh;
+  background-color:#fff;
+}
 
 #webcoderskull{
   position: absolute;
   left: 50%;
   top: 35%;
   transform: translate(-50%);
-  padding: 0 20px;
+  padding: 0px;
   width: 100%;
+  
+}
+
+#webcoderskull h1{
+  letter-spacing: 8px;
+  font-size: 4rem;  
+} 
+#webcoderskull #title{
   text-align: center;
 }
 
-canvas{
-  width: 100vw;
-  height:90vh;
-  background-color:#fff;
-}
-#webcoderskull h1{
-letter-spacing: 5px;
-font-size: 5rem;
-font-family: 'Roboto', sans-serif;
-font-weight:lighter;
-}
-#mainList{
-  padding: auto;
-  justify-content: flex-end;
-}
-#mainList li a{
-position: relative;
-text-decoration: none;
-color: black;
-font-size: 18px;
-
-}
-
-#mainList li a:after, .sidenav a:after{
-  content: "";
-  position: absolute;
-  background-color: red;
-  height: 2px;
-  width: 0%;
-  left:0;
-  bottom:-10px;
-  transition: 0.3s;
-}
-
-#mainList li a:hover{
-  color:grey;
-}
-#mainList li a:hover:after, .sidenav a:hover:after{
-  width: 50%;
-}
-
-
-/*                                             */
 
 
 
@@ -123,89 +96,15 @@ hr{
   margin: auto;
   background-color: rgb(255, 247, 247);
 }
-/* .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    background-color: #fff;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-  }
   
-  .sidenav ul li a {
-    position: relative;
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: black;
-    display: block;  
-    opacity: 0;
-    -webkit-animation: fadeIn 0.5s 1;
-    animation: fadeIn 0.5s 1;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-  }
-  .sidenav ul li a:hover{
-    text-decoration: none;
-    color:grey;
-  }
-  .sidenav ul li a:nth-child(5n+1) {
-    -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s;
-  }
-  
-  .sidenav ul li a:nth-child(5n+2) {
-    -webkit-animation-delay: 0.3s;
-     animation-delay: 0.3s;
-  }
-  
-  .sidenav ul li a:nth-child(5n+3) {
-    -webkit-animation-delay: 0.6s;
-    animation-delay: 0.6s;
-  }
-  
-  .sidenav ul li a:nth-child(5n+4) {
-    -webkit-animation-delay: 0.9s;
-    animation-delay: 0.9s;
-  }
-  
-@-webkit-keyframes fadeIn{
-  0%{opacity:0; filter: blur(4px);transform: translateY(16px);}
-  100%{opacity:1; filter: blur(0px);transform: translateY(16px);}
-}
-  @keyframes fadeIn{  
-    0%{opacity:0; filter: blur(4px);transform: translateY(16px);}  
-    100%{opacity:1; filter: blur(0px);}
-  } */
-
- 
-  
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    left: 0px;
-    font-size: 36px;
-    margin-right: 50px;
-  }
-  
-  #main {
-    transition: margin-left .5s;
-    padding: 0px;
-  }
-  
-
-  .outer {
+.outer {
     width: 2px;
     height: 100%;
     margin-left: 25px;
     position: relative;
     overflow: hidden;
   }
-  .inner {
+.inner {
     position: absolute;
     width:100%;
     height: 40%;
@@ -225,15 +124,18 @@ hr{
 @media screen and (max-width: 450px){
     
     #main a {padding: 0px; margin-left: 5px;}
-    .display{font-size: 30px; margin-top: 10px; margin-left: -5px; }
+    
     #header-contact{max-height: 400px;}
     #sec{font-size: 16px; margin: 0px; padding: 5px;}
-    #webcoderskull{margin: 0;}
+
+    #webcoderskull{top: 20%;}
+    #webcoderskull #title{text-align: left;}     
+    #webcoderskull h1{font-size: 30px;}
     
-    #mainList{justify-content: center; margin:10px;}
-    #mainList li a{font-size: 16px;}
     canvas{height: 60vh;width: 100vw;margin-left: 0px;}
     .expert{padding:5px; margin: 5px; left:15px}
+    .expert nav li a{font-size: 1.125em;}
+
     #about .row p{font-size: 1.125em;};
     
     
@@ -254,8 +156,8 @@ hr{
   #sec{font-size:25px; margin-top:50px; margin-bottom: 100px; padding: 20px;}
 }
 @media screen and (max-width: 1980px){
-  .small-header{font-size: 1.875em;}
-  .expert nav li a{font-size: 1.875em;}
+  #webcoderskull h1{padding: 75px;}
+  .small-header{font-size: 1.875em;}  
   #about p, #media p{font-size: 1.5625em;}
   #contact a{font-size: 1.375em;}
 }
