--- a/styles.css
+++ b/styles.css
@@ -64,14 +64,7 @@ canvas{
     color:grey !important;
 }
 
-.display{  
-    line-height: .9;
-    letter-spacing: 0;
-    font-size: 80px;
-    font-weight: 300;
-    margin: 5px;
-    padding-bottom: 5px;
-}
+
 
 #sec{
     font-size:35px;
@@ -85,12 +78,16 @@ canvas{
   padding: 5px;
   font-size: 15px;
 }
+
 .expert{
     padding-top: 50px;
     left: 25px;
     padding-bottom: 150px;
 }
-
+.move{
+  padding-top: 50px;
+  padding-bottom: 150px;
+}
 hr{
   width: 45%;
   margin: auto;
@@ -136,13 +133,12 @@ hr{
     .expert{padding:5px; margin: 5px; left:15px}
     .expert nav li a{font-size: 1.125em;}
 
-    #about .row p{font-size: 1.125em;};
+    .move{padding-top: 10px; padding-bottom: 50px;}
     
     
     
-    #about .text-responsive {
-      font-size: 1.5625rem;
-    }
+    
+    
     
 }
 
@@ -158,7 +154,7 @@ hr{
 @media screen and (max-width: 1980px){
   #webcoderskull h1{padding: 75px;}
   .small-header{font-size: 1.875em;}  
-  #about p, #media p{font-size: 1.5625em;}
+  #about p, #career p{font-size: 1.5625em;}
   #contact a{font-size: 1.375em;}
 }
 
