--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,54 @@ hr{
   }
 
  
+
+
+
+.cookie-contest-modal{
+  height: 100vh;
+  width: 100vw;
+  background-color: #fff;
+  position:fixed;
+  top:0;
+  left:0;
+  z-index: 999;
+  display: none;
+  align-items: flex-end;
   
+}
+.cookie-contest-modal.active{
+  display: flex;
+}
+  
+.content{
+  background-color:  #fff;
+  padding: 5vw 3vw;
+  border-top: 1px solid black;
+}
+.btns{
+  display: flex;
+  justify-content:flex-end;
+  margin-top:2em;
+
+}
+.btn{
+  border: none;
+  outline: none;
+  padding: .8em 1.5em;
+  width: 100px;
+  margin-right: 1em;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+.btn.accept{
+  background-color: #ccffff;
+
+}
+
+.btn.cancel{
+  background-color:#f2f2f2;
+}
 
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
