--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,6 @@ canvas{
 }
 
 
-
-
 .header-contact{
     height: 530px;
     
@@ -117,55 +115,53 @@ hr{
     box-shadow: 0px 0px 30px 20px red;
   }
 
- 
+
+/*MODAL---------------------------------*/
 
 
-
-.cookie-contest-modal{
+ .cookie-consent-modal{
   height: 100vh;
-  width: 100vw;
-  background-color: #fff;
-  position:fixed;
-  top:0;
-  left:0;
+  width: 100%;
+  background-color: rgba(0,0,0,0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 999;
   display: none;
   align-items: flex-end;
-  
 }
-.cookie-contest-modal.active{
+.cookie-consent-modal.active{
   display: flex;
 }
-  
 .content{
-  background-color:  #fff;
-  padding: 5vw 3vw;
-  border-top: 1px solid black;
+  background-color: #fff;
+  padding: 2vw 2vw;
+  width: 450px;
+  border-radius: 10px 10px 0 0;
 }
+
 .btns{
   display: flex;
-  justify-content:flex-end;
-  margin-top:2em;
-
+  justify-content: flex-end;
+  margin-top: 2em;
 }
 .btn{
   border: none;
   outline: none;
-  padding: .8em 1.5em;
+  border-radius: 0;
+  padding: 5em 1.5em;
   width: 100px;
-  margin-right: 1em;
-  border-radius: 3px;
+  margin-right: 1em;  
   text-transform: uppercase;
 }
-
 .btn.accept{
-  background-color: #ccffff;
-
+  background-color: lightskyblue;
+  color: #fff;
+}
+.btn.accept{
+  color:#e6e6e6;
 }
 
-.btn.cancel{
-  background-color:#f2f2f2;
-}
 
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
@@ -174,27 +170,25 @@ hr{
 
 @media screen and (max-width: 450px){
     
-    #main a {padding: 0px; margin-left: 5px;}
-    
+    #main a {padding: 0px; margin-left: 5px;}    
     #header-contact{max-height: 400px;}
     #sec{font-size: 16px; margin: 0px; padding: 5px;}
-
     #webcoderskull{top: 20%;}
     #webcoderskull #title{text-align: left;}     
-    #webcoderskull h1{font-size: 30px;}
-    
+    #webcoderskull h1{font-size: 30px;}    
     canvas{height: 60vh;width: 100vw;margin-left: 0px;}
     .expert{padding:5px; margin: 5px; left:15px}
     .expert nav li a{font-size: 1.125em;}
-
-    .move{padding-top: 10px; padding-bottom: 50px;}    
+    .move{padding-top: 10px; padding-bottom: 50px;}
+    
+    .cookie-consent-modal{
+      height: 60vh;
+      width: 100%;
+      top: 0;
+      left: 0;
+    }
  
 }
-
-
-
-
-
 
 @media screen and (max-width: 810px){
   .expert{padding: 5px;}
