--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html{
 body{
   overflow-x: hidden;
 }
-h1,h2,h3,p,a{
+h1,h2,h3,h4,p,a{
   font-family: 'Raleway', sans-serif !important;
 }
 
@@ -168,8 +168,7 @@ hr{
   padding-right: 5px;
 }
 .partners .left-p{
-  margin-right: 5px;
-  
+  margin-right: 5px;  
 }
 
 
@@ -190,18 +189,18 @@ hr{
     #webcoderskull #title{text-align: left;}     
     #webcoderskull h1{font-size: 30px;}    
     canvas{height: 60vh;width: 100vw;margin-left: 0px;}
-    .expert{padding:5px; margin: 5px; left:15px}
+    .expert{padding:5px; margin: 5px; left:25px}
     .expert nav li a{font-size: 1.125em;}
-    .move{padding-top: 10px; padding-bottom: 30px;}    
+    .collapse p{ font-size: 0.8rem; text-align: center;}
+
+
+    .move{padding-top: 10px; padding-bottom: 5px !important;}    
     .cookie-consent-modal{height: 60vh;width: 100%;top: 0;left: 0;}
 
-    .card-body .row .col{
-      padding: 0;
-    }
-    .card-body p{
-      font-size: 0.9rem;
-    }
+    .card-body .row .col{padding: 0;}
+    .card-body p{font-size: 0.9rem;}
   
+    #career .row{padding-top: 20px !important; padding-bottom: 20px !important; }
  
 }
 
@@ -212,8 +211,18 @@ hr{
 @media screen and (max-width: 1980px){
   #webcoderskull h1{padding: 75px;}
   .small-header{font-size: 1.5em;}  
-  .move{padding-bottom: 0px;}  
+  .move{padding-bottom: 50px;padding-top: 50px;}   
+  
  /*  #about p, #career p{font-size: 1.5625em;} */
   #contact a{font-size: 1.375em;}
+  .expert{padding-top: 0px; padding-bottom: 50px;}
+  .expert .nav-item{padding-left: 0px; margin-left: -15px;}
+  .expert .nav a:hover{cursor: pointer;}
+  .collapse p{
+    padding: 0px;
+    margin: 0px;
+    transition: 0.2s;  
+    text-align: center;  
+  }
 }
 
