--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,8 @@ body{
   overflow-x: hidden;
   
 }
-h1,h2,h3,h4,p,a{
-  
-  font-family: 'Poppins', sans-serif !important;  
+h1,h2,h3,h4,p,a{  
+  font-family: 'Raleway', sans-serif !important;
 }
 
 .navbar #main a{
